kubernetes/apps/portfolio/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-backend
  namespace: portfolio
spec:
  selector:
    app: portfolio-backend
  ports:
    - name: http
      port: 3001
      targetPort: 3001
