kubernetes/apps/portfolio/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-frontend
  namespace: portfolio
spec:
  selector:
    app: portfolio-frontend
  ports:
    - port: 80
      targetPort: 8080
